src/app/home/home.component.scss
:host {
    padding: 2rem;
    display: grid;
    gap: 2rem;
    grid-template-columns: 1;

    @media (min-width: 700px) {
        max-width: 1640px;
        width: 80%;
        margin: auto;

        grid-template-columns: repeat(2, 50%);
    }
}

mat-card {
    cursor: pointer;
}

mat-card-header > mat-icon {
    background: #303030;
    display: flex;
    align-items: center;
    justify-content: center;
}

mat-card-title > mat-icon {
    vertical-align: middle;
}

